// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test OptionalConfigurations Switch the tabs with data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main configurationTabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_Script"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab scriptTab"
          data-tab-id="Script"
          id="bp3-tab-title_configurationTabs_Script"
          role="tab"
          tabindex="0"
        >
          common.script
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_Configurations"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab scriptTab"
          data-tab-id="Configurations"
          id="bp3-tab-title_configurationTabs_Configurations"
          role="tab"
          tabindex="0"
        >
          Configuration
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_configurationTabs_Configurations"
        class="bp3-tab-panel scriptTab tabWidth"
        id="bp3-tab-panel_configurationTabs_Configurations"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="stepPanel"
              >
                <div
                  class="formGroup"
                >
                  <div
                    class="bp3-form-group"
                    data-id="spec.environmentVariables[0].name-0"
                  >
                    <label
                      class="bp3-label"
                      for="spec.environmentVariables"
                    >
                      <div
                        class="formLabel"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="scriptOptionalForm_spec.environmentVariables"
                        >
                          pipeline.scriptInputVariables common.optionalLabel
                        </span>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          class="environmentVarHeader"
                        >
                          <span
                            class="label"
                          >
                            Name
                          </span>
                          <span
                            class="label"
                          >
                            Type
                          </span>
                          <span
                            class="label"
                          >
                            Value
                          </span>
                        </div>
                        <div
                          class="environmentVarHeader"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="spec.environmentVariables[0].name-1"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="spec.environmentVariables[0].name"
                                  placeholder="name"
                                  type="text"
                                  value="var1"
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="spec.environmentVariables[0].type-2"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="spec.environmentVariables[0].type"
                                      placeholder="- typeLabel -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="String"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="spec.environmentVariables[0].value-3"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="spec.environmentVariables[0].value"
                                    placeholder="valueLabel"
                                    type="text"
                                    value="hello"
                                  />
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="fixed-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 9 9"
                                          width="12"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                          <button
                            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                            data-testid="remove-environmentVar-0"
                            type="button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="main-trash"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 16 20"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                          data-testid="add-environmentVar"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-plus StyledProps--main"
                            icon="plus"
                          >
                            <svg
                              data-icon="plus"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                plus
                              </desc>
                              <path
                                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="bp3-button-text"
                          >
                            addInputVar
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="formGroup"
                >
                  <div
                    class="bp3-form-group"
                    data-id="spec.outputVariables-4"
                  >
                    <label
                      class="bp3-label"
                      for="spec.outputVariables"
                    >
                      <div
                        class="formLabel"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="scriptOptionalForm_spec.outputVariables"
                        >
                          pipeline.scriptOutputVariables common.optionalLabel
                        </span>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          class="outputVarHeader"
                        >
                          <span
                            class="label"
                          >
                            Name
                          </span>
                          <span
                            class="label"
                          >
                            Type
                          </span>
                          <span
                            class="label"
                          >
                            Value
                          </span>
                        </div>
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-plus StyledProps--main"
                            icon="plus"
                          >
                            <svg
                              data-icon="plus"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                plus
                              </desc>
                              <path
                                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="bp3-button-text"
                          >
                            addOutputVar
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="formGroup"
                >
                  <div
                    class="bp3-form-group radioGroup"
                    data-id="spec.onDelegate-5"
                  >
                    <label
                      class="bp3-label"
                      for="spec.onDelegate"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="scriptOptionalForm_spec.onDelegate"
                      >
                        pipeline.executionTarget common.optionalLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="StyledProps--main"
                      >
                        
                        <div
                          class="RadioButtonGroup--inline"
                        >
                          <label
                            class="RadioButton--radio StyledProps--main"
                          >
                            <input
                              class="RadioButton--input"
                              name="spec.onDelegate"
                              type="radio"
                              value="targethost"
                            />
                            <span
                              class="RadioButton--radioIcon"
                            />
                            Specify Target Host
                          </label>
                          <label
                            class="RadioButton--radio StyledProps--main"
                          >
                            <input
                              checked=""
                              class="RadioButton--input"
                              name="spec.onDelegate"
                              type="radio"
                              value="delegate"
                            />
                            <span
                              class="RadioButton--radioIcon"
                            />
                            On Delegate
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test OptionalConfigurations initial render 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main configurationTabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_Script"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab scriptTab"
          data-tab-id="Script"
          id="bp3-tab-title_configurationTabs_Script"
          role="tab"
          tabindex="0"
        >
          common.script
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_Configurations"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab scriptTab"
          data-tab-id="Configurations"
          id="bp3-tab-title_configurationTabs_Configurations"
          role="tab"
          tabindex="0"
        >
          Configuration
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_configurationTabs_Script"
        class="bp3-tab-panel scriptTab tabWidth"
        id="bp3-tab-panel_configurationTabs_Script"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="formGroup sm"
          >
            <div
              class="bp3-form-group bp3-disabled"
            >
              <label
                class="bp3-label"
                for="spec.shell"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="shellScriptForm_spec.shell"
                >
                  common.scriptType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="spec.shell"
                        placeholder="- common.scriptType -"
                        style="padding-right: 0px;"
                        type="text"
                        value="Bash"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.source.spec.script"
              >
                <div
                  class="formLabel"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="shellScriptForm_spec.source.spec.script"
                  >
                    common.script
                  </span>
                  <div
                    class="bp3-popover-wrapper typeSelectorWrapper"
                  >
                    <div
                      class="bp3-popover-target typeSelector"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="bp3-icon StyledProps--main icon fixed"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="monacoWrapper"
                >
                  <textarea
                    name="spec.source.spec.script"
                  >
                    echo test
                  </textarea>
                  <button
                    class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                      icon="fullscreen"
                    >
                      <svg
                        data-icon="fullscreen"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          fullscreen
                        </desc>
                        <path
                          d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
